--- a/package.json
+++ b/package.json
@@ -14,11 +14,14 @@
   "author": "R. Oung",
   "license": "MIT",
   "dependencies": {
-    "body-parser": "^1.19.0",
+    "bcryptjs": "^2.4.3",
+    "connect-flash": "^0.1.1",
     "cookie-session": "^1.4.0",
     "dotenv": "^8.2.0",
     "ejs": "^3.1.2",
     "express": "*",
+    "express-ejs-layouts": "^2.5.0",
+    "express-session": "^1.17.1",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.9.10",
     "mqtt": "^4.0.0",
@@ -26,6 +29,7 @@
     "passport-azure-ad-oauth2": "0.0.4",
     "passport-github": "^1.1.0",
     "passport-google-oauth20": "^2.0.0",
+    "passport-local": "^1.0.0",
     "socket.io": "^2.3.0"
   },
   "devDependencies": {
