--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "express": "*",
     "express-ejs-layouts": "^2.5.0",
     "express-session": "^1.17.1",
+    "helmet": "^3.22.0",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.9.10",
     "mqtt": "^4.0.0",
